# alexa-skill-template

./: .gitignore  README.md  ask-resources.json  pyproject.toml  test.py
infrastructure/cfn-deployer/: skill-stack.yaml
lambda/: hello_world.py  house_elf.py  requirements.txt
skill-package/: skill.json
skill-package/interactionModels/custom/: en-US.json
