[tool.poetry]
name = "jade"
version = "0.1.0"
description = ""
authors = ["C. Thomas Brittain <thomasb@bitfocus.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.34"
black = "^24.1.1"
ask-sdk-core = "^1.19.0"
dyntastic = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
